# 20251101IntroStellarBootcamp2026CapIII

./: README.md  fundamentosrust.md
contratosEjemplo/: README.md
contratosEjemplo/data-types/: Cargo.toml  README.md
contratosEjemplo/data-types/contracts/data-types/: Cargo.toml
contratosEjemplo/data-types/contracts/data-types/src/: lib.rs  test.rs
contratosEjemplo/functions/: README.md
contratosEjemplo/functions/contracts/calculator/: Cargo.toml
contratosEjemplo/functions/contracts/calculator/src/: lib.rs  test.rs
contratosEjemplo/hello-world/: README.md
contratosEjemplo/ifelse/: README.md
contratosEjemplo/ifelse/contracts/AgeEvaluator/: Cargo.toml
contratosEjemplo/ifelse/contracts/AgeEvaluator/src/: lib.rs  test.rs
contratosEjemplo/todo-frontend/: package-lock.json  package.json
contratosEjemplo/todo-frontend/src/: App.tsx  index.css  main.tsx
contratosEjemplo/todo-soroban-contract/contracts/hello-world/src/: lib.rs
contratosEjemplo/todo-soroban-contract/contracts/todo_list_contract/: Cargo.toml
contratosEjemplo/todo-soroban-contract/contracts/todo_list_contract/src/: lib.rs
contratosEjemplo/todo_cli/: Cargo.toml  README.md  todo.json
contratosEjemplo/todo_cli/src/: main.rs
scripts/: install.sh  uninstall.sh
